# 2dmanifolds

./: 2dmanifolds.cabal  2dsurfaces.cabal  Classify.hs  README.md
src/: Classify.hs
src/Classify/: Cursor.hs
test/: ClassifySpec.hs
