name:                2dsurfaces
version:             0.1.0.0
description:         Provide classification for 2D topological surfaces.
author:              Eugene Vigdorchik
category:            Math
build-type:          Simple
cabal-version:       >=1.8

library
  exposed-modules:   Classify
  hs-source-dirs:    src
  other-modules:     Classify.Cursor
  build-depends:     base ==4.6.*, parsec ==3.1.*