name:                2dsurfaces
version:             0.1.0.0
description:         Provide classification for 2D topological surfaces.
author:              Eugene Vigdorchik
category:            Math
build-type:          Simple
cabal-version:       >=1.20.0

library
  exposed-modules:   Classify
  hs-source-dirs:    src
  other-modules:     Classify.Cursor
  build-depends:     base, parsec
  default-language:  Haskell98

Test-Suite classify-spec
 type: exitcode-stdio-1.0
 main-is: ClassifySpec.hs
 build-depends: base, HUnit, 2dsurfaces
 hs-source-dirs:    test
 default-language: Haskell98